--- a/DockerFile
+++ b/DockerFile
@@ -2,6 +2,10 @@ FROM apiman/on-wildfly10
 
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 ADD apiman.properties $JBOSS_HOME/standalone/configuration
+
+
+EXPOSE 8787
+EXPOSE 8080
+EXPOSE 8443
  
 CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0", "-c", "standalone-apiman.xml", "--debug"]
-
