--- a/apiman.properties
+++ b/apiman.properties
@@ -1,6 +1,6 @@
 # Remote maven repositories to use when looking for plugins.  Comma separated
 # list of URLs.
-apiman.plugins.repositories=http://nexus.default.svc.cluster.local/content/groups/public/
+apiman.plugins.repositories=file:///C/Users/aka/Downloads/m2,https://repo1.maven.org/maven2/,http://repository.jboss.org/nexus/content/groups/public/
 apiman-manager.plugins.registries=http://cdn.rawgit.com/apiman/apiman-plugin-registry/1.2.9.Final/registry.json
 
 
